--- a/styles/style.scss
+++ b/styles/style.scss
@@ -284,19 +284,20 @@ section{
                 box-shadow: 1px 4px 15px rgba(0,0,0,.32); 
             }
             .about-text{
-                padding:1.5rem;
+                padding:1rem;
                 display:flex;
                 flex-direction: column;
                 .large-text{
-                    font-size: 3rem;
+                    font-size: 2rem;
                     font-weight: 700;
+                    padding-left: 1rem;
                     color: var(--color-secondary);
                 }
                 .small-text{
-                    padding-left: 3rem;
+                    padding-left: 1rem;
                     position:relative;
                     text-transform: uppercase;
-                    font-size: 1.2rem;
+                    font-size: 1.1rem;
                     color: var(--color-grey1);
                     letter-spacing: 2px;
                 }
@@ -387,6 +388,139 @@ section{
     }
 }
 
+//portfolios
+.port-text{
+    padding: 2rem 0;
+    text-align: center;
+}
+
+.portfolios{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 2rem;
+    margin-top: 3rem;
+    .portfolio-item{
+        position:relative;
+        img{
+            width:100%;
+            height: 300px;
+            object-fit: contain;
+            border-radius: 15px;
+        }
+        .hover-item{
+            width: 100%;
+            height: 100%;
+            background-color: var(--color-secondary);
+            position: absolute;
+            left: 0;
+            top:0;
+            border-radius: 15px ;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            opacity: 0;
+            transform: scale(0);
+            transition: var(--main-transition);
+            h3{
+                font-size: 1.5rem;
+                justify-content: center;
+                align-items: center;
+            }
+            .icons{
+                display:flex;
+                justify-content: center;
+                align-items: center;
+                .icon{
+                    background-color: var(--color-primary);
+                    border-radius: 50%;
+                    width: 50px;
+                    height: 50px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    margin: 0 1rem;
+                    cursor: pointer;
+                    transition: var(--main-transition);
+                    i{
+                        font-size: 1.5rem;
+                        color: var(--color-white);
+                        margin: 0 1rem;
+                    }
+                    &:hover{
+                        background-color:var(--color-white);
+                        i{
+                            color: var(--color-black);
+                        }
+                    }
+                }
+
+            }
+        }
+    }
+}
+
+.portfolio-item:hover .hover-item{
+    opacity: 1;
+    transform: scale(1);
+}
+
+//Contact section
+.contact-content{
+    display: flex;
+    padding-top: 3.5rem;
+    .left-contact{
+        flex:2;
+        h4{
+            margin-top: 1rem;
+            font-style: 2rem;
+            text-transform: uppercase;
+        }
+        p{
+            margin: 1rem 0;
+            line-height: 2rem;
+        }
+        .contact-info{
+            .contact-item{
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+            }
+        }
+    }
+    .right-contact{
+        flex:3;
+        margin-left: 3rem;
+        .input-control{
+            margin: 1.5rem 0;
+            input, textarea{
+                border-radius: 30px;
+                font-weight: inherit;
+                font-size: inherit;
+                font-family: inherit;
+                padding: .8rem 1.1rem;
+                outline: none;
+                border:none;
+                background-color: var(--color-grey5);
+                width: 100%;
+                color: var(--color-white);
+                resize: none;
+            }
+        }
+    }
+    .i-c-2{
+        display: flex;
+        // flex-direction: column;
+        :last-child{
+            margin-left: 1.5rem;
+        }
+    }
+    .submit-btn{
+        display: flex;
+        justify-content: flex-start;
+        
+    }
+}
 
 .stat-title{
     text-transform: uppercase;
@@ -404,3 +538,4 @@ section{
     //     transform: translateX(-50%);
     // }
 }
+
