--- a/styles/style.css
+++ b/styles/style.css
@@ -7,8 +7,8 @@
 }
 
 :root {
-  --color-primary: #191d2b;
-  --color-secondary: #1e934f;
+  --color-primary: #b0abab;
+  --color-secondary: #ac2936;
   --color-white: #FFFFFF;
   --color-black: #000;
   --color-grey0: #f8f8f8;
@@ -444,13 +444,13 @@ section {
 }
 
 .about-stats .progress-bars .progress-bar .progress-con .prog-text {
-  color: var(--color-grey2);
+  color: var(--color-grey4);
 }
 
 .about-stats .progress-bars .progress-bar .progress-con .progress {
   width: 100%;
   height: .45rem;
-  background-color: var(--color-grey4);
+  background-color: var(--color-grey1);
   margin-left: 1rem;
   position: relative;
 }
